#876 - upgrade to java 21 and build files to use temurin distribution