@@ -59,7 +59,7 @@ class CustomerControllerIT extends AbstractIntegrationTest {
 
     @Test
     void shouldFindCustomerById() throws Exception {
-        Customer customer = customerList.get(0);
+        Customer customer = customerList.getFirst();
         Long customerId = customer.getId();
 
         this.mockMvc
@@ -106,7 +106,7 @@ class CustomerControllerIT extends AbstractIntegrationTest {
 
     @Test
     void shouldUpdateCustomer() throws Exception {
-        Customer customer = customerList.get(0);
+        Customer customer = customerList.getFirst();
         customer.setName("Updated Customer");
 
         this.mockMvc
@@ -121,7 +121,7 @@ class CustomerControllerIT extends AbstractIntegrationTest {
 
     @Test
     void shouldDeleteCustomer() throws Exception {
-        Customer customer = customerList.get(0);
+        Customer customer = customerList.getFirst();
 
         this.mockMvc
                 .perform(delete("/api/customers/{id}", customer.getId()))
