@@ -30,7 +30,7 @@ public class CommonRules {
                 .resideOutsideOfPackages(excludedPackages)
                 .should()
                 .beInterfaces()
-                .because(String.format("Resources should be interfaces in %s", packageName));
+                .because("Resources should be interfaces in %s".formatted(packageName));
     }
 
     static ArchRule componentAnnotationIsNotAllowedRule(String packageName) {
@@ -39,7 +39,7 @@ public class CommonRules {
                 .resideInAPackage(packageName)
                 .should()
                 .notBeAnnotatedWith(Component.class)
-                .because(String.format("Component annotation is not allowed in %s", packageName));
+                .because("Component annotation is not allowed in %s".formatted(packageName));
     }
 
     static ArchRule springAnnotationsClassesAreNotAllowedRule(String... packageNames) {
@@ -60,9 +60,8 @@ public class CommonRules {
                 .notBeAnnotatedWith(Controller.class)
                 .andShould()
                 .notBeAnnotatedWith(RestController.class)
-                .because(String.format(
-                        "Classes in %s should not be annotated with Spring annotations",
-                        Arrays.toString(packageNames)));
+                .because("Classes in %s should not be annotated with Spring annotations"
+                        .formatted(Arrays.toString(packageNames)));
     }
 
     // Fields
@@ -89,7 +88,7 @@ public class CommonRules {
                 .resideInAPackage(packageName)
                 .should()
                 .notBePublic()
-                .because(String.format("Public fields are not allowed in %s", packageName));
+                .because("Public fields are not allowed in %s".formatted(packageName));
     }
 
     static ArchRule publicAndFinalFieldsAreNotAllowedRule(String... packageNames) {
@@ -102,8 +101,8 @@ public class CommonRules {
                 .notBeFinal()
                 .andShould()
                 .notBePublic()
-                .because(String.format(
-                        "Fields with public and final modifiers are not allowed in %s", Arrays.toString(packageNames)));
+                .because("Fields with public and final modifiers are not allowed in %s"
+                        .formatted(Arrays.toString(packageNames)));
     }
 
     static ArchRule fieldsShouldHaveGetterRule(String... packageNames) {
@@ -123,9 +122,8 @@ public class CommonRules {
                 .doNotHaveModifier(JavaModifier.SYNTHETIC)
                 .should()
                 .beFinal()
-                .because(String.format(
-                        "Private attributes should be instanced by constructor classes, or it should be static in %s",
-                        packageName));
+                .because("Private attributes should be instanced by constructor classes, or it should be static in %s"
+                        .formatted(packageName));
     }
 
     // Constructors
@@ -139,7 +137,7 @@ public class CommonRules {
                 .areNotAnonymousClasses()
                 .should()
                 .bePublic()
-                .because(String.format("Public constructors are only allowed in %s", packageName));
+                .because("Public constructors are only allowed in %s".formatted(packageName));
     }
 
     // Methods
@@ -150,7 +148,7 @@ public class CommonRules {
                 .resideInAPackage(packageName)
                 .should()
                 .notBeAnnotatedWith(Bean.class)
-                .because(String.format("Bean methods are not allowed in %s", packageName));
+                .because("Bean methods are not allowed in %s".formatted(packageName));
     }
 
     static ArchRule privateMethodsAreNotAllowedRule(String packageName) {
@@ -160,7 +158,7 @@ public class CommonRules {
                 .resideInAPackage(packageName)
                 .should()
                 .notBePrivate()
-                .because(String.format("Private methods are not allowed in %s", packageName));
+                .because("Private methods are not allowed in %s".formatted(packageName));
     }
 
     static ArchRule staticMethodsAreNotAllowedRule(String packageName) {
@@ -170,7 +168,7 @@ public class CommonRules {
                 .resideInAPackage(packageName)
                 .should()
                 .notBeStatic()
-                .because(String.format("Static methods are not allowed in %s", packageName));
+                .because("Static methods are not allowed in %s".formatted(packageName));
     }
 
     static ArchRule methodsShouldBePublicRule(String... packageNames) {
@@ -190,6 +188,6 @@ public class CommonRules {
                 .resideInAPackage(packageName)
                 .should()
                 .beStatic()
-                .because(String.format("Static methods are only allowed in %s", packageName));
+                .because("Static methods are only allowed in %s".formatted(packageName));
     }
 }
