@@ -53,7 +53,7 @@ class CustomerControllerIT extends AbstractIntegrationTest {
 
     @Test
     void shouldFindCustomerById() throws Exception {
-        Customer customer = customerList.get(0);
+        Customer customer = customerList.getFirst();
         Long customerId = customer.getId();
 
         this.mockMvc
@@ -99,7 +99,7 @@ class CustomerControllerIT extends AbstractIntegrationTest {
 
     @Test
     void shouldUpdateCustomer() throws Exception {
-        Customer customer = customerList.get(0);
+        Customer customer = customerList.getFirst();
         customer.setText("Updated Customer");
 
         this.mockMvc
@@ -113,7 +113,7 @@ class CustomerControllerIT extends AbstractIntegrationTest {
 
     @Test
     void shouldDeleteCustomer() throws Exception {
-        Customer customer = customerList.get(0);
+        Customer customer = customerList.getFirst();
 
         this.mockMvc
                 .perform(delete("/api/customers/{id}", customer.getId()))
