@@ -62,7 +62,7 @@ class PostControllerIT extends AbstractIntegrationTest {
 
     @Test
     void shouldFindPostById() throws Exception {
-        Post post = postList.get(0);
+        Post post = postList.getFirst();
         Long postId = post.getId();
 
         this.mockMvc
@@ -127,7 +127,7 @@ class PostControllerIT extends AbstractIntegrationTest {
 
     @Test
     void shouldUpdatePost() throws Exception {
-        Long postId = postList.get(0).getId();
+        Long postId = postList.getFirst().getId();
         UpdatePostRequest updatePostRequest = new UpdatePostRequest("Updated Post", "New Content");
 
         this.mockMvc
@@ -142,7 +142,7 @@ class PostControllerIT extends AbstractIntegrationTest {
 
     @Test
     void shouldDeletePost() throws Exception {
-        Post post = postList.get(0);
+        Post post = postList.getFirst();
 
         this.mockMvc
                 .perform(delete("/api/posts/{id}", post.getId()))
