@@ -64,7 +64,7 @@ class CustomerControllerIT extends AbstractIntegrationTest {
 
         @Test
         void shouldFindCustomerById() throws Exception {
-            Customer customer = customerList.get(0);
+            Customer customer = customerList.getFirst();
             Long customerId = customer.getId();
 
             mockMvc.perform(get("/api/customers/{id}", customerId))
@@ -76,7 +76,7 @@ class CustomerControllerIT extends AbstractIntegrationTest {
 
         @Test
         void shouldFindCustomerRevisionsById() throws Exception {
-            Customer customer = customerList.get(0);
+            Customer customer = customerList.getFirst();
             Long customerId = customer.getId();
 
             mockMvc.perform(get("/api/customers/{id}/revisions", customerId))
@@ -127,7 +127,7 @@ class CustomerControllerIT extends AbstractIntegrationTest {
 
     @Test
     void shouldUpdateCustomer() throws Exception {
-        Long customerId = customerList.get(0).getId();
+        Long customerId = customerList.getFirst().getId();
         CustomerRequest customerRequest = new CustomerRequest("Updated Customer", "Junit Address");
 
         this.mockMvc
@@ -142,7 +142,7 @@ class CustomerControllerIT extends AbstractIntegrationTest {
 
     @Test
     void shouldDeleteCustomer() throws Exception {
-        Customer customer = customerList.get(0);
+        Customer customer = customerList.getFirst();
 
         this.mockMvc
                 .perform(delete("/api/customers/{id}", customer.getId()))
