@@ -37,7 +37,7 @@ public class JooqSorting {
                     tableType.getClass().getField(sortFieldName.toUpperCase(Locale.ROOT));
             sortField = (TableField) tableField.get(tableType);
         } catch (NoSuchFieldException | IllegalAccessException ex) {
-            String errorMessage = String.format("Could not find table field: %s", sortFieldName);
+            String errorMessage = "Could not find table field: %s".formatted(sortFieldName);
             throw new InvalidDataAccessApiUsageException(errorMessage, ex);
         }
         return sortField;
